--- a/frontend/app/assets/stylesheets/archivesspace/header.less
+++ b/frontend/app/assets/stylesheets/archivesspace/header.less
@@ -61,21 +61,13 @@
   }
 }
 .user-label > span,
-.repository > span {
+.repository-label > span {
   margin-right: 5px;
 }
 .user-container .dropdown-menu {
   min-width: 80px;
 }
-.user-label,
-.repository-label {
-  -webkit-transition: width 500ms;
-  -moz-transition: width 500ms;
-  -ms-transition: width 500ms;
-  -o-transition: width 500ms;
-  transition: width 500ms;
-
-
+.navbar-inset-label {
   padding: 5px 9px;
   display: inline-block;
   vertical-align: middle;
@@ -87,25 +79,35 @@
   margin-bottom: 0;
   line-height: @baseLineHeight;
   background-color: #e9e9e9;
-
   overflow: hidden;
-  width: 60px;
-  min-width: 60px;
+  max-width: 200px;
   box-shadow: inset -2px 0px 3px #CCC;
 
-  &.empty {
-    width: auto;
-    min-width: auto;
+  .repository-label, .user-label {
+    max-width: 100px;
+    overflow: hidden;
+    display: inline-block;
   }
 }
 
-.user-label:hover,
-.repository-label:hover {
-  -webkit-transition: width 500ms;
-  -moz-transition: width 500ms;
-  -ms-transition: width 500ms;
-  -o-transition: width 500ms;
-  transition: width 500ms;
+.user-container {
+  .empty, .selected {
+    color: #999;
+  }
+
+ .dropdown-submenu.pull-left {
+    > .dropdown-menu {
+      left: -140%;
+      right: auto;
+      min-width: 140%;
+    }
+ }
+}
+
+.repository-label.empty {
+  background-color: #F99;
+  padding: 0 0 0 5px;
+  .border-radius(4px);
 }
 
 .dropdown-menu {
