--- a/frontend/app/assets/stylesheets/archivesspace/header.less
+++ b/frontend/app/assets/stylesheets/archivesspace/header.less
@@ -51,11 +51,8 @@
   display: none;
 }
 
-// user logged in, repository container
-.user-container,
-.repository-container {
-  margin-left: 10px;
-  
+// user logged in container
+.user-container {
   .dropdown-toggle, .btn {
     margin-top: 5px !important;
   }
@@ -68,16 +65,14 @@
   min-width: 80px;
 }
 .navbar-inset-label {
-  padding: 5px 9px;
+  padding: 0 10px;
+  height: 30px;
   display: inline-block;
-  vertical-align: middle;
-  margin: 5px 0 0 !important;
+  margin: 5px 0 -5px !important;
   .box-shadow(~"inset 0 1px 2px rgba(0,0,0,.1), 0 1px 0 rgba(255,255,255,.15)");
   .border-radius(4px 0 0 4px);
-  #font > .sans-serif(13px, normal, 1);
-  .navbarVerticalAlign(28px); // Vertically center in navbar
+  #font > .sans-serif(13px, normal, 30px);
   margin-bottom: 0;
-  line-height: @baseLineHeight;
   background-color: #e9e9e9;
   overflow: hidden;
   max-width: 200px;
