--- a/frontend/app/views/shared/_header.html.erb
+++ b/frontend/app/views/shared/_header.html.erb
@@ -59,10 +59,10 @@
             <li>
               <%= form_tag(url_for(:controller => :search, :action => :do_search), :method => :get, :class => "navbar-form pull-left") do %>
                 <div class="input-append">
-                  <input type="text" class="span2" placeholder="<%= I18n.t("navbar.search_placeholder") %>" name="q" value="<%= params[:q] %>"/>
+                  <input id="global-search-box" type="text" class="span2" placeholder="<%= I18n.t("navbar.search_placeholder") %>" name="q" value="<%= params[:q] %>"/>
                   <div class="btn-group">
                     <%= hidden_field_tag "type", "" %>
-                    <button class="btn"><span class=" icon-search"></span></button>
+                    <button id="global-search-button" class="btn"><span class=" icon-search"></span></button>
                     <a class="btn dropdown-toggle last" data-toggle="dropdown" href="#"><b class="caret"></b></a>
                     <ul class="dropdown-menu scoped-search-options">
                       <li><a href="#" data-type=""><%= I18n.t("navbar.search_all") %></a></li>
