--- a/frontend/app/assets/stylesheets/archivesspace/token-input.less
+++ b/frontend/app/assets/stylesheets/archivesspace/token-input.less
@@ -46,7 +46,7 @@ ul.token-input-list li {
 
 ul.token-input-list li input {
   border: 0;
-  width: 350px;
+  width: 100%;
   padding: 3px 8px;
   background-color: white;
   -webkit-appearance: caret;
