--- a/frontend/app/views/agents/_linker.html.erb
+++ b/frontend/app/views/agents/_linker.html.erb
@@ -28,7 +28,7 @@
         <ul class="dropdown-menu">
           <li><a href="javascript:void(0);" class="linker-browse-btn"><%= I18n.t("actions.browse") %></a></li>
           <li class="dropdown-submenu pull-left">
-            <a href="javascript:void(0);"><%= I18n.t("create") %></a>
+            <a href="javascript:void(0);"><%= I18n.t("actions.create") %></a>
             <ul class="dropdown-menu">
               <li><a href="javascript:void(0);" data-target="<%= url_for :controller => :agents, :action => :new, :type => :agent_person, :inline => true %>" class="linker-create-btn"><%= I18n.t("agent_person._html.singular") %></a></li>
               <li><a href="javascript:void(0);" data-target="<%= url_for :controller => :agents, :action => :new, :type => :agent_family, :inline => true %>" class="linker-create-btn"><%= I18n.t("agent_family._html.singular") %></a></li>
