--- a/frontend/app/views/events/_sidebar.html.erb
+++ b/frontend/app/views/events/_sidebar.html.erb
@@ -3,7 +3,7 @@
     <li><a href="#basic_information"><%= I18n.t("event._html.section.basic_information") %> <span class="icon-chevron-right"></span></a></li>
     <li><a href="#event_date"><%= I18n.t("event.date") %> <span class="icon-chevron-right"></span></a></li>
     <li><a href="#event_linked_agents_"><%= I18n.t("linked_agent._html.plural") %> <span class="icon-chevron-right"></span></a></li>
-    <li><a href="#event_linked_records_"><%= I18n.t("linked_record._html.section.basic_information") %> <span class="icon-chevron-right"></span></a></li>
+    <li><a href="#event_linked_records_"><%= I18n.t("linked_record._html.plural") %> <span class="icon-chevron-right"></span></a></li>
 
     <% if not controller.action_name === "show" %>
       <li class="form-actions">
