Fix container_location read only view (show template)

--- a/frontend/app/assets/stylesheets/archivesspace/common.less
+++ b/frontend/app/assets/stylesheets/archivesspace/common.less
@@ -168,6 +168,7 @@ h2 > .label {
       &.in {
         padding-top: 8px;
         border-top: 1px solid #E5E5E5;
+        overflow: visible;
       }
     }
   }
