--- a/frontend/app/views/container_locations/_show.html.erb
+++ b/frontend/app/views/container_locations/_show.html.erb
@@ -3,15 +3,18 @@
 
   <div class="container-subrecord">
     <% container_locations.each_with_index do |container_location, index| %>
-      <%= read_only_view(container_location.to_hash, :label_css => "span4") %>
-      <% if container_location["location"] %>
-        <div class="row-fluid label-and-value">
-          <div class="span4" ><%= I18n.t("container_location.location") %></div>
-          <div class="span8 token-list">
-            <%= render_token :object => container_location["resolved"],
-                             :label => Location.from_hash(container_location["resolved"]["location"]).display_string,
+      <% 
+        container_location["jsonmodel_type"] = "container_location"
+      %>
+      <%= read_only_view(container_location, :label_css => "span4") %>
+      <% if resolved[index] %>
+        <div class="control-group">
+          <div class="control-label"><%= I18n.t("container_location.location") %></div>
+          <div class="controls token-list">
+            <%= render_token :object => resolved[index],
+                             :label => Location.from_hash(resolved[index]).display_string,
                              :type => "location",
-                             :uri => container_location["location"] %>
+                             :uri => container_location["ref"] %>
           </div>
         </div>
       <% end %>
