Revert overflow:hidden on accordion body (was visible to allow popover to be seen) - and now allow tokens to have their popover position configured

--- a/frontend/app/views/container_locations/_show.html.erb
+++ b/frontend/app/views/container_locations/_show.html.erb
@@ -14,7 +14,8 @@
             <%= render_token :object => resolved[index],
                              :label => Location.from_hash(resolved[index]).display_string,
                              :type => "location",
-                             :uri => container_location["ref"] %>
+                             :uri => container_location["ref"],
+                             :placement => "top" %>
           </div>
         </div>
       <% end %>
