--- a/frontend/app/views/shared/_templates.html.erb
+++ b/frontend/app/views/shared/_templates.html.erb
@@ -105,7 +105,7 @@
 --></div>
 <div id="linker_selectedtoken_template"><!--
    <li id="${item.id.replace(/\//g,'_')}">
-      <input type="hidden" name="${config.path}[resolved][${config.name}]{if config.multiplicity != 'one'}[]{/if}" />
+      <input type="hidden" name="${config.path}[_resolved]{if config.multiplicity != 'one'}[]{/if}" />
       <input type="hidden" name="${config.path}[${config.name}]{if config.multiplicity != 'one'}[]{/if}" value="${item.id}" />
       <%= render_token :label => "${item.name}",
                        :type => "${item.json.jsonmodel_type}",
