--- a/frontend/app/views/subjects/_linker.html.erb
+++ b/frontend/app/views/subjects/_linker.html.erb
@@ -1,13 +1,9 @@
 <%
-  resolved_obj = form.resolved_obj
-  
-  if resolved_obj.nil?
+   if form.obj.has_key?('_resolved')
+     selected_json =  Subject.from_hash(form.obj['_resolved']).to_json
+   else
      selected_json = "{}"
-  elsif resolved_obj.is_a?(String)
-    selected_json = JSON(resolved_obj).to_json
-  else
-    selected_json = Subject.from_hash(resolved_obj).to_json
-  end
+   end
 
   data_path = form.path
   data_name = "ref" # De-referenced by the controller if the schema def calls for an item array
