--- a/frontend/app/views/subjects/_show_inline.erb
+++ b/frontend/app/views/subjects/_show_inline.erb
@@ -13,13 +13,13 @@
       <% subjects.each_with_index do | subject, index | %>
         <div class="row-fluid">
           <div class="span3 pull1">
-            <%= subject["ref_id"] %>
+            <%= subject['_resolved']["ref_id"] %>
           </div>
           <div class="span8 token-list">
-            <%= render_token :object => subject,
-                             :label => Subject.from_hash(subject).display_string,
+            <%= render_token :object => subject['_resolved'],
+                             :label => Subject.from_hash(subject['_resolved']).display_string,
                              :type => "subject",
-                             :uri => subject['uri'] %>
+                             :uri => subject['ref'] %>
           </div>
         </div>
       <% end %>
