--- a/frontend/app/views/linked_agents/_show.html.erb
+++ b/frontend/app/views/linked_agents/_show.html.erb
@@ -9,6 +9,7 @@
     <div class="span8"><strong><%= I18n.t("linked_agent.ref") %></strong></div>
   </div>
   <% linked_agents.each_with_index do | link, index | %>
+  <% puts "LINK #{link.inspect}" %>
     <div class="row-fluid">
       <div class="span3 pull1">
         <%= I18n.t("linked_agent.role_#{link["role"]}") %>
