WIP add related_accessions template/linker refactoring

--- a/frontend/app/views/accessions/_linker.html.erb
+++ b/frontend/app/views/accessions/_linker.html.erb
@@ -1,18 +1,24 @@
-<hr/>
+<%
+   if form.obj.has_key?('_resolved')
+     selected_json =  form.obj['_resolved']
+   else
+     selected_json = "{}"
+   end
+%>
 <div class="control-group">
    <label class="control-label"><%= I18n.t "accession._html.plural" %></label>
    <div class="controls">
        <div class="input-append linker-wrapper">
           <input type="text" class="linker"
-            id="<%= form.id_for("accessions") %>"
+            id="<%= form.id_for("ref") %>"
             data-label="<%= I18n.t "accession._html.singular" %>"
             data-label_plural="<%= I18n.t "accession._html.plural" %>"
             data-path="<%= form.path %>"
-            data-name="related_accessions"
+            data-name="ref"
             data-url="<%= url_for :controller => :search, :action => :do_search, :format => :json %>"
-            data-selected='<%= form.obj['related_accessions'].blank? ? "[]" : form.obj['related_accessions']['_resolved'].to_json %>'
+            data-selected='<%= selected_json %>'
             data-format_property="title"
-            data-sortable="true"
+            data-multiplicity="one"
             data-types='["accession"]'
           />
        </div>
