--- a/frontend/app/views/resources/_form_container.html.erb
+++ b/frontend/app/views/resources/_form_container.html.erb
@@ -26,8 +26,6 @@
       <hr/>
       <%= form.label_and_textfield "ead_id" %>
       <%= form.label_and_textfield "ead_location" %>
-      <%= render :partial => "accessions/linker", :locals => { :form => form }%>
-
     </section>
     
     <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "extents"} %>
@@ -56,9 +54,9 @@
 
   <% end %>
 
-
   <% form.emit_template("resource") %>
 
+  <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "related_accessions", :template => "resource_related_accessions"} %>
   <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "linked_agents", :template => "resource_linked_agent"} %>
   <%= render :partial => "shared/subrecord_form", :locals => {:form => form, :name => "subjects", :template => "subrecord_subject"} %>
   <%= render :partial => "notes/form", :locals => {:form => form, :all_note_types => note_types_for(form['jsonmodel_type'])} %>
