WIP fix accession linker failing when initialising javascript for token editor

--- a/frontend/app/views/accessions/_linker.html.erb
+++ b/frontend/app/views/accessions/_linker.html.erb
@@ -2,7 +2,7 @@
    if form.obj.has_key?('_resolved')
      selected_json =  form.obj['_resolved']
    else
-     selected_json = "{}"
+     selected_json = {}
    end
 %>
 <div class="control-group">
