--- a/frontend/app/views/accessions/_sidebar.html.erb
+++ b/frontend/app/views/accessions/_sidebar.html.erb
@@ -10,6 +10,10 @@
       <li><a href="#accession_dates_"><%= I18n.t "extent._html.plural" %> <span class="icon-chevron-right"></span></a></li>
     <% end %>
 
+    <% if controller.action_name != "show" || @accession.related_resources.length > 0 %>
+      <li><a href="#accession_related_resources_"><%= I18n.t "related_resource._html.plural" %> <span class="icon-chevron-right"></span></a></li>
+    <% end %>
+
     <% if controller.action_name != "show" || @accession.linked_agents.length > 0 %>
       <li><a href="#accession_linked_agents_"><%= I18n.t "linked_agent._html.plural" %> <span class="icon-chevron-right"></span></a></li>
     <% end %>
