--- a/frontend/app/views/resources/_linker.html.erb
+++ b/frontend/app/views/resources/_linker.html.erb
@@ -1,18 +1,24 @@
-<hr/>
+<%
+   if form.obj.has_key?('_resolved')
+     selected_json =  form.obj['_resolved']
+   else
+     selected_json = {}
+   end
+%>
 <div class="control-group">
    <label class="control-label"><%= I18n.t("resource._html.plural") %></label>
    <div class="controls">
        <div class="input-append linker-wrapper">
           <input type="text" class="linker"
-            id="<%= form.id_for("resources") %>"
+            id="<%= form.id_for("ref") %>"
             data-label="<%= I18n.t("resource._html.singular") %>"
             data-label_plural="<%= I18n.t("resource._html.plural") %>"
             data-path="<%= form.path %>"
-            data-name="related_resources"
+            data-name="ref"
             data-url="<%= url_for :controller => :search, :action => :do_search, :format => :json %>"
-            data-selected='<%= form.obj['related_resources'].blank? ? "[]" : form.obj['related_resources']['_resolved'].to_json %>'
+            data-selected='<%= selected_json.to_json %>'
             data-format_property="title"
-            data-sortable="true"
+            data-multiplicity="one"
             data-types='["resource"]'
           />
        </div>
