--- a/frontend/app/views/agents/show.html.erb
+++ b/frontend/app/views/agents/show.html.erb
@@ -56,7 +56,7 @@
         <% if @agent.agent_contacts.length > 0 %>
           <div class="row-fluid">
             <section id="contacts">
-              <h3><%= I18n.t("agent_contact_details._html.plural") %></h3>
+              <h3><%= I18n.t("agent_contact._html.plural") %></h3>
               <div class="accordion details" id="agent_contact_accordion">
                 <% @agent.agent_contacts.each_with_index do | contact, index | %>
                   <div class="accordion-group">
