--- a/frontend/app/views/collection_management_records/new.html.erb
+++ b/frontend/app/views/collection_management_records/new.html.erb
@@ -7,7 +7,7 @@
         <%= render :partial => "sidebar" %>
       </div>
       <div class="span9 record-pane">
-        <h2><%= I18n.t("action.new_prefix") %> <%= I18n.t("collection_management_record._html.singular") %>  <span class="label label-info"><%= I18n.t("collection_management_record._html.singular") %></span></h2>
+        <h2><%= I18n.t("actions.new_prefix") %> <%= I18n.t("collection_management_record._html.singular") %>  <span class="label label-info"><%= I18n.t("collection_management_record._html.singular") %></span></h2>
 
         <%= render :partial => "collection_management_records/form", :locals => {:form => form} %>
         <div class="form-actions">
