--- a/frontend/app/views/agents/edit.html.erb
+++ b/frontend/app/views/agents/edit.html.erb
@@ -7,7 +7,7 @@
         <%= render :partial => "sidebar", :locals => {:form => form} %>
       </div>
       <div class="span9 record-pane">
-        <h2><%= @agent.names[0]["primary_name"] %>  <span class="label label-info"><%= I18n.t("agent._html.singular") %></span></h2>
+        <h2><%= @agent.names[0]["sort_name"] %>  <span class="label label-info"><%= I18n.t("agent._html.singular") %></span></h2>
         <%= render :partial => "agents/form", :locals => {:form => form} %>
         <div class="form-actions">
           <button type="submit" class="btn btn-primary"><%= I18n.t "actions.save_prefix" %> <%= I18n.t("agent.agent_type.#{@agent.agent_type}") %></button>
